app/javascript/stylesheets/navbar.scss
@import "navbar_mobile";

// Colors
$nav-color: white;
$nav-hover-text-color: white;
$nav-dark-text-color: #212529;
$nav-dark-text-hover-color: rgba(244,92,67,1);
$nav-border-color: #e9ecef;
$nav-disabled-color: #6c757d;

nav {
  height: inherit;
  box-sizing: border-box;
  display: block;
}
.nav {
  display: flex;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.nav-link {
  display: block;
  padding: 0.5rem 1rem;
}
.nav-link:hover, .nav-link:focus {
  text-decoration: none;
}
.nav-link.disabled {
  color: $nav-disabled-color;
  pointer-events: none;
  cursor: default;
}

.navbar {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  //background: linear-gradient(90deg, rgba(235,51,73,1) 0%, rgba(244,92,67,1)) !important;
  height: inherit;

  .container {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
  }
}

.navbar-brand {
  display: inline-block;
  padding-top: 0.3125rem;
  padding-bottom: 0.3125rem;
  margin-right: 1rem;
  font-size: 1.25rem;
  line-height: inherit;
  white-space: nowrap;
}
.navbar-brand:hover, .navbar-brand:focus {
  text-decoration: none;
}

.navbar-logo {
  margin: 0 0.5rem;
}

.navbar-nav {
  display: flex;
  flex-direction: column;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;

  .nav-link {
    padding-right: 0;
    padding-left: 0;
  }
}

.navbar-text {
  display: inline-block;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.navbar-collapse {
  flex-basis: 100%;
  flex-grow: 1;
  align-items: center;
}

.navbar-toggler {
  padding: 0.25rem 0.75rem;
  font-size: 1.25rem;
  line-height: 1;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 0.25rem;
}

.navbar-toggler:hover, .navbar-toggler:focus {
  text-decoration: none;
}

.navbar-toggler-icon {
  display: inline-block;
  width: 1.5em;
  height: 1.5em;
  vertical-align: middle;
  content: "";
  background: no-repeat center center;
  background-size: 100% 100%;
}

@include media-breakpoint-up(xs) {
  .navbar-expand-lg > .container,
  .navbar-expand-lg > .container-fluid,
  .navbar-expand-lg > .container-sm,
  .navbar-expand-lg > .container-md,
  .navbar-expand-lg > .container-lg,
  .navbar-expand-lg > .container-xl {
    padding-right: 0;
    padding-left: 0;
  }
}

@include media-breakpoint-up(xs){
  .navbar-expand-lg {
    flex-flow: row nowrap;
    justify-content: flex-start;
  }
  .navbar-expand-lg .navbar-nav {
    flex-direction: row;
  }
  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 0.5rem;
    padding-left: 0.5rem;
  }
  .navbar-expand-lg > .container,
  .navbar-expand-lg > .container-fluid,
  .navbar-expand-lg > .container-sm,
  .navbar-expand-lg > .container-md,
  .navbar-expand-lg > .container-lg,
  .navbar-expand-lg > .container-xl {
    flex-wrap: nowrap;
  }
  .navbar-expand-lg .navbar-collapse {
    display: flex !important;
    flex-basis: auto;
  }
  .navbar-expand-lg .navbar-toggler {
    display: none;
  }
}

.navbar-expand .navbar-toggler {
  display: none;
}

.navbar-light {
  .navbar-brand {
    color: rgba(0, 0, 0, 0.9);
  }

  .navbar-brand:hover, .navbar-brand:focus {
    color: rgba(0, 0, 0, 0.9);
  }

  .navbar-nav .nav-link {
    color: rgba(0, 0, 0, 0.5);
  }

  .navbar-nav .nav-link:hover, .navbar-nav .nav-link:focus {
    color: $nav-hover-text-color;
  }

  .navbar-nav .nav-link.disabled {
    color: rgba(0, 0, 0, 0.3);
  }

  .navbar-toggler {
    color: rgba(0, 0, 0, 0.5);
    border-color: rgba(0, 0, 0, 0.1);
  }

  .navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  }

  .navbar-text {
    color: rgba(0, 0, 0, 0.5);
  }

  .navbar-text a {
    color: rgba(0, 0, 0, 0.9);
  }

  .navbar-text a:hover, .navbar-text a:focus {
    color: rgba(0, 0, 0, 0.9);
  }
}

.navbar {
  display: none;
}

#desktopNav {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  transition: background-color 0.2s ease;

  .navbar-brand {
    font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    font-weight: 700;
    color: $nav-dark-text-color;
  }

  .navbar-nav .nav-item .nav-link {
    color: $nav-dark-text-color;
    font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    font-weight: 700;
    font-size: 0.9rem;
    padding: 0.75rem 0;
  }

  .navbar-nav .nav-item .nav-link:hover, .navbar-nav .nav-item .nav-link:active {
    color: $nav-hover-text-color;
  }

  .navbar-nav .nav-item .nav-link.active {
    color: $nav-dark-text-color !important;
  }

  @include media-breakpoint-up(xs) {
    box-shadow: none;
    background-image: $primary-gradient;

    .navbar-brand, .navbar-brand:hover {
      color: $nav-hover-text-color;
    }

    .navbar-nav .nav-item .nav-link {
      color: $nav-hover-text-color;
      padding: 0 1rem;
    }

    .navbar-nav .nav-item .nav-link:hover {
      color: $nav-hover-text-color;
    }
  }

  @include media-breakpoint-down(xs) {
    display: none;
  }
}

@include media-breakpoint-up(xs) {
  #desktopNav.navbar-home-page {
    background: transparent;
  }

  #desktopNav.navbar-scrolled{
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    background-color: $nav-color;
    .navbar-brand {
      color: $nav-dark-text-color;
    }

    .navbar-brand:hover {
      color: $nav-dark-text-hover-color;
    }

    .navbar-nav .nav-item .nav-link {
      color: $nav-dark-text-color;
    }

    .navbar-nav .nav-item .nav-link:hover {
      color: $nav-dark-text-hover-color;
    }
  }
}

